# feup-aed-AirlineDbMgmt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Dados/: aeroportos.txt  avioes.txt  bagagens.txt  bilhetes.txt  locaisDeTransporte.txt  passageiros.txt  servicos.txt  transportadorDeBagagem.txt  voos.txt
Dados/dados1/: aeroportos.txt  avioes.txt  locaisDeTransporte.txt  passageiros.txt
Dados/dados2/: aeroportos.txt  avioes.txt  bilhetes.txt  locaisDeTransporte.txt  servicos.txt  voos.txt
Tests/: Aeroporto.cpp  Aeroporto.h  Aviao.cpp  Aviao.h  Bagagem.cpp  Bagagem.h  Bilhete.cpp  Bilhete.h  CompanhiaAerea.cpp  CompanhiaAerea.h  Data.cpp  Data.h  ExcessoPeso.cpp  ExcessoPeso.h  Funcionario.cpp  Funcionario.h  Horario.cpp  Horario.h  LoadData.cpp  LocalDeTransporte.cpp  LocalDeTransporte.h  Passageiro.cpp  Passageiro.h  Servico.cpp  Servico.h  TransportadorDeBagagem.cpp  TransportadorDeBagagem.h  Voo.cpp  Voo.h  menu.cpp  menu.h  tests.cpp
dataset/: avioes.txt  excessoPeso.txt  servicos.txt  voos.txt
docs/: Doxyfile.txt
docs/output/html/: _aeroporto_8h_source.html  _aviao_8h_source.html  _bagagem_8h_source.html  _bilhete_8h_source.html  _companhia_aerea_8h_source.html  _data_8h_source.html  _excesso_peso_8h_source.html  _funcionario_8h_source.html  _horario_8h_source.html  _load_data_8h_source.html  _local_de_transporte_8h_source.html  _passageiro_8h_source.html  _servico_8h_source.html  _transportador_de_bagagem_8h_source.html  _voo_8h_source.html  annotated.html  bst_8h_source.html  class_aeroporto-members.html  class_aeroporto.html  class_aviao-members.html  class_aviao.html  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  class_b_s_t_itr_in.html  class_b_s_t_itr_level-members.html  class_b_s_t_itr_level.html  class_b_s_t_itr_post-members.html  class_b_s_t_itr_post.html  class_b_s_t_itr_pre-members.html  class_b_s_t_itr_pre.html  class_bagagem-members.html  class_bagagem.html  class_bilhete-members.html  class_bilhete.html  class_binary_node-members.html  class_binary_node.html  class_companhia_aerea-members.html  class_companhia_aerea.html  class_data-members.html  (+54 more)
docs/output/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_8.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+16 more)
src/: Aeroporto.cpp  Aeroporto.h  Bilhete.cpp  Bilhete.h  CompanhiaAerea.cpp  CompanhiaAerea.h  ExcessoPeso.cpp  Horario.cpp  Horario.h  LoadData.cpp  LoadData.h  Passageiro.cpp  Passageiro.h  TransportadorDeBagagem.cpp  Voo.h  main.cpp  menu.cpp  menu.h
